kubernetes/postgres-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  serviceName: postgres-service
  replicas: 2
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      terminationGracePeriodSeconds: 1800
      containers:
        - name: postgresql
          image: postgres
          ports:
            - name: postgres-port
              containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              name: postgre-pvc-claim
  volumeClaimTemplates:
    - metadata:
        name: postgre-pvc-claim
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: postgres-storage
        resources:
          requests:
            storage: 2Gi
