kubernetes/user-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-deployment
  template:
    metadata:
      labels:
        app: user-deployment

    spec:
      containers:
        - name: user-service
          imagePullPolicy: Never
          image: learning-k8s/user-service:1.0
          ports:
            - name: user-port
              containerPort: 8090
