kubernetes/ingress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service
  labels:
    app: gateway-ingress

spec:
  ports:
    - port: 8762
  type: NodePort
  selector:
    app: gateway-ingress
