kubernetes/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgresql

spec:
  ports:
    - port: 5432
  type: NodePort
  selector:
    app: postgresql
