kubernetes/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-deployment

spec:
  ports:
    - port: 30003
      nodePort: 30003
      protocol: TCP
      targetPort: user-port
  type: NodePort
  selector:
    app: user-deployment
