kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress

spec:
  backend:
    serviceName: ingress-service
    servicePort: 8672

  rules:
    - host: localhost
      http:
        paths:
          - path: /age
            backend:
              serviceName: age-service
              servicePort: 8091
          - path: /users
            backend:
              serviceName: user-service
              servicePort: 8090
